--- a/Contribution_#1125.ipynb
+++ b/Contribution_#1125.ipynb
@@ -13,7 +13,7 @@
    "id": "b3a5a736-14f9-480a-946c-af52201136ae",
    "metadata": {},
    "source": [
-    "To avoid errors, it is best to specify a key attribute as a string data-type. Another issue occurred as a result of specifying a key attribute as a non-string data-type in the code below."
+    "Attributes are members that any Python object can have. Normally, the built-in syntax would be expected to determine what types of attribute names are acceptable. However, getattr and similar functions behave differently. They only require a string for the attribute name. That string is then immediately provided to the internal PyObject GetAttr methods. And those do not necessitate good identification. To avoid errors, it is best to specify a key attribute as a string data-type. Another issue occurred as a result of specifying a key attribute as a non-string data-type in the code below."
    ]
   },
   {
